Fixes #1 Adding overflow-x for maintain menu tools hidden

--- a/herramientas/css/styles.css
+++ b/herramientas/css/styles.css
@@ -1,4 +1,5 @@
 body{
+	overflow-x: hidden;
 	position: relative;
 	-webkit-transition:  right 0.4s ease-in-out;
     -moz-transition:  right 0.4s ease-in-out;
